# gdal_viewer

./: .gitignore  CMakeLists.txt  base_raster.h  gdal_raster.c  image.c  image.h  main.c  raster.c  raster.h  rgba_raster.c
cmake/modules/: HandmadeMath.cmake  ImGui.cmake  ImportGitRepository_Status.cmake  ImportProject.cmake  Sokol.cmake  Stb.cmake  hmm.c  sokol.c  sokol.m  sokol_imgui.c  sokol_imgui.cpp
shaders/: image_shader.glsl  png_image.glsl  rgba_shader.glsl
